--- a/wat-annotator/Cargo.toml
+++ b/wat-annotator/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.8", features = [ "derive" ] }
 regex = "1.10.5"
+wasmparser = "0.212.0"
 wast = "212.0.0"
