Add color debug info from runner

--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+colored = "2.0.0"
 wasmtime = { version = "22.0.0", features = ["runtime", "component-model"] }
 wasmtime-wasi = "22.0.0"
