--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-
-members = ["wat-annotator", "example-component", "print-interface", "runner"]
+members = ["wat-annotator", "example-component", "runner"]
+resolver = "1"
