--- a/wat-annotator/Cargo.toml
+++ b/wat-annotator/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "4.5.8", features = ["derive"] }
+clap = { workspace = true }
 gimli = "0.31.0"
 regex = "1.10.5"
 wasmparser = "0.212.0"
 wast = "212.0.0"
-wasmtime = { version = "22.0.0", features = ["runtime", "component-model"] }
+wasmtime = { workspace = true }
