--- a/wat-annotator/Cargo.toml
+++ b/wat-annotator/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 clap = { workspace = true }
 gimli = "0.31.0"
 regex = "1.10.5"
+serde = { workspace = true }
+serde_json = { workspace = true }
 wasmparser = "0.212.0"
 wast = "212.0.0"
 wasmtime = { workspace = true }
