--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ resolver = "1"
 [workspace.dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
 wasmtime = { version = "22.0.0", features = ["runtime", "component-model"] }
+serde = { version = "1.0.204", features = ["derive"] }
+# use json for now, we can change to a different serialization format at basically any time
+serde_json = "1.0"
