--- a/wat-annotator/Cargo.toml
+++ b/wat-annotator/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { workspace = true }
 gimli = "0.31.0"
+itertools = "0.13.0"
 regex = "1.10.5"
 serde = { workspace = true }
 serde_json = { workspace = true }
