--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { workspace = true }
-colored = "2.0.0"
+colored = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 wasmtime = { workspace = true }
